--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Eleks",
   "license": "MIT",
   "scripts": {
-    "serve": "yarn webpack-dev-server --open",
-    "test": "yarn webpack-dev-server --config webpack.test.config.js"
+    "start": "yarn webpack-dev-server --open"
   },
   "dependencies": {},
   "devDependencies": {
